--- a/app/src/main/res/layout/layout_recent_notification_card.xml
+++ b/app/src/main/res/layout/layout_recent_notification_card.xml
@@ -7,6 +7,7 @@
     app:cardBackgroundColor="#010523"
     android:layout_marginTop="12dp"
     android:layout_marginRight="16dp"
+    android:layout_marginBottom="10dp"
     app:cardCornerRadius="8dp"
     android:padding="5dp"
     android:paddingStart="8dp">
