--- a/app/src/main/res/layout/activity_view_student_profile.xml
+++ b/app/src/main/res/layout/activity_view_student_profile.xml
@@ -45,7 +45,6 @@
                 android:id="@+id/id"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
-                android:layout_marginEnd="92dp"
                 android:background="@drawable/rounded_corners"
                 android:backgroundTint="#2B2468"
                 android:ems="10"
@@ -55,7 +54,6 @@
                 android:textColor="#FFFFFF"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toEndOf="@+id/idView"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.028" />
@@ -95,7 +93,6 @@
                 android:id="@+id/firstName"
                 android:layout_width="142dp"
                 android:layout_height="30dp"
-                android:layout_marginStart="16dp"
                 android:layout_marginTop="60dp"
                 android:layout_marginBottom="60dp"
                 android:background="@drawable/rounded_corners"
@@ -108,7 +105,7 @@
                 android:textColorHint="@android:color/secondary_text_dark"
                 app:layout_constraintBottom_toTopOf="@+id/branch"
                 app:layout_constraintEnd_toStartOf="@+id/lastName"
-                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintHorizontal_bias="0.208"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/id"
                 app:layout_constraintVertical_bias="0.0" />
@@ -129,15 +126,15 @@
                 android:textColorHint="@android:color/secondary_text_dark"
                 app:layout_constraintBottom_toTopOf="@+id/year"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.84"
+                app:layout_constraintHorizontal_bias="0.848"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/id" />
+                app:layout_constraintTop_toBottomOf="@+id/id"
+                app:layout_constraintVertical_bias="0.0" />
 
             <TextView
                 android:id="@+id/branchView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="18dp"
                 android:text="Branch"
@@ -145,9 +142,10 @@
                 android:textSize="19sp"
                 app:layout_constraintBottom_toTopOf="@+id/branch"
                 app:layout_constraintEnd_toStartOf="@+id/yearView"
-                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintHorizontal_bias="0.09"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/firstName" />
+                app:layout_constraintTop_toBottomOf="@+id/firstName"
+                app:layout_constraintVertical_bias="0.0" />
 
             <TextView
                 android:id="@+id/yearView"
@@ -168,7 +166,6 @@
                 android:id="@+id/branch"
                 android:layout_width="142dp"
                 android:layout_height="30dp"
-                android:layout_marginStart="16dp"
                 android:layout_marginTop="150dp"
                 android:layout_marginBottom="38dp"
                 android:background="@drawable/rounded_corners"
@@ -181,9 +178,10 @@
                 android:textColorHint="@android:color/secondary_text_dark"
                 app:layout_constraintBottom_toTopOf="@+id/backButton"
                 app:layout_constraintEnd_toStartOf="@+id/year"
-                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintHorizontal_bias="0.208"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/id" />
+                app:layout_constraintTop_toBottomOf="@+id/id"
+                app:layout_constraintVertical_bias="0.0" />
 
             <EditText
                 android:id="@+id/year"
