--- a/app/src/main/res/layout/fragment_addpapers.xml
+++ b/app/src/main/res/layout/fragment_addpapers.xml
@@ -15,6 +15,7 @@
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:background="@drawable/rounded_corners"
+        android:paddingLeft="10dp"
         android:backgroundTint="#CCC8C8"
         android:hint="  Enter Name for your file"
         android:textSize="20sp"
