--- a/app/src/main/res/layout/fragment_addstudent.xml
+++ b/app/src/main/res/layout/fragment_addstudent.xml
@@ -14,14 +14,12 @@
         android:layout_height="450dp"
         app:cardBackgroundColor="#010523"
         app:cardCornerRadius="10dp"
-        android:padding="5dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.64">
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -59,23 +57,21 @@
 
             <EditText
                 android:id="@+id/addStudentId"
-                android:layout_width="wrap_content"
+                android:layout_width="200dp"
                 android:layout_height="30dp"
-                android:layout_marginStart="99dp"
                 android:background="@drawable/rounded_corners"
                 android:backgroundTint="#2B2468"
                 android:ems="10"
                 android:hint=" Enter Student ID"
-                android:inputType="none"
                 android:paddingLeft="5dp"
                 android:textColor="#FFFFFF"
                 android:textColorHint="@android:color/secondary_text_dark"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintHorizontal_bias="0.681"
                 app:layout_constraintStart_toEndOf="@+id/idTView"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.069" />
+                app:layout_constraintVertical_bias="0.066" />
 
             <TextView
                 android:id="@+id/NameView"
@@ -97,7 +93,6 @@
                 android:id="@+id/brancView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="88dp"
                 android:layout_marginTop="19dp"
                 android:layout_marginBottom="22dp"
                 android:text="Branch"
@@ -105,13 +100,14 @@
                 android:textSize="19sp"
                 app:layout_constraintBottom_toTopOf="@+id/addStudentBranch"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.045"
+                app:layout_constraintHorizontal_bias="0.429"
                 app:layout_constraintStart_toEndOf="@+id/Percen"
-                app:layout_constraintTop_toBottomOf="@+id/password" />
+                app:layout_constraintTop_toBottomOf="@+id/password"
+                app:layout_constraintVertical_bias="0.0" />
 
             <EditText
                 android:id="@+id/addStudentName"
-                android:layout_width="142dp"
+                android:layout_width="150dp"
                 android:layout_height="30dp"
                 android:layout_marginTop="68dp"
                 android:layout_marginBottom="67dp"
@@ -131,11 +127,9 @@
 
             <EditText
                 android:id="@+id/password"
-                android:layout_width="142dp"
+                android:layout_width="150dp"
                 android:layout_height="30dp"
-                android:layout_marginStart="43dp"
                 android:layout_marginTop="68dp"
-                android:layout_marginEnd="48dp"
                 android:layout_marginBottom="67dp"
                 android:background="@drawable/rounded_corners"
                 android:backgroundTint="#2B2468"
@@ -147,9 +141,10 @@
                 android:textColorHint="@android:color/secondary_text_dark"
                 app:layout_constraintBottom_toTopOf="@+id/addStudentBranch"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintHorizontal_bias="0.552"
                 app:layout_constraintStart_toEndOf="@+id/addStudentName"
-                app:layout_constraintTop_toBottomOf="@+id/addStudentId" />
+                app:layout_constraintTop_toBottomOf="@+id/addStudentId"
+                app:layout_constraintVertical_bias="1.0" />
 
             <TextView
                 android:id="@+id/Percen"
@@ -171,7 +166,6 @@
                 android:id="@+id/passwrd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="132dp"
                 android:layout_marginTop="24dp"
                 android:layout_marginBottom="18dp"
                 android:text="Password"
@@ -179,13 +173,14 @@
                 android:textSize="19sp"
                 app:layout_constraintBottom_toTopOf="@+id/password"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.045"
+                app:layout_constraintHorizontal_bias="0.58"
                 app:layout_constraintStart_toEndOf="@+id/NameView"
-                app:layout_constraintTop_toBottomOf="@+id/addStudentId" />
+                app:layout_constraintTop_toBottomOf="@+id/addStudentId"
+                app:layout_constraintVertical_bias="0.0" />
 
             <EditText
                 android:id="@+id/addStudentPercentage"
-                android:layout_width="142dp"
+                android:layout_width="150dp"
                 android:layout_height="30dp"
                 android:layout_marginTop="165dp"
                 android:layout_marginBottom="25dp"
@@ -205,9 +200,8 @@
 
             <EditText
                 android:id="@+id/addStudentBranch"
-                android:layout_width="142dp"
+                android:layout_width="150dp"
                 android:layout_height="30dp"
-                android:layout_marginStart="46dp"
                 android:layout_marginTop="165dp"
                 android:layout_marginBottom="25dp"
                 android:background="@drawable/rounded_corners"
@@ -219,9 +213,10 @@
                 android:textColorHint="@android:color/secondary_text_dark"
                 app:layout_constraintBottom_toTopOf="@+id/action_student_reset"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintHorizontal_bias="0.564"
                 app:layout_constraintStart_toEndOf="@+id/addStudentPercentage"
-                app:layout_constraintTop_toBottomOf="@+id/addStudentId" />
+                app:layout_constraintTop_toBottomOf="@+id/addStudentId"
+                app:layout_constraintVertical_bias="0.333" />
 
             <Button
                 android:id="@+id/action_student_reset"
@@ -254,15 +249,15 @@
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="270dp"
-        android:layout_height="175dp"
+        android:layout_width="198dp"
+        android:layout_height="126dp"
         android:scaleType="centerInside"
         app:layout_constraintBottom_toTopOf="@+id/cardView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.794"
+        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/appwithoutbackground" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
