--- a/app/src/main/res/layout/fragment_placementdashboard.xml
+++ b/app/src/main/res/layout/fragment_placementdashboard.xml
@@ -80,7 +80,7 @@
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/viewrecentnotification_recycler_view"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="1dp"
                     android:layout_marginEnd="1dp"
